Nitpick from main